# qagenda

./: .gitignore  Cargo.toml  flake.nix
nix/: homeManager.nix
src/: config.rs  default.css  logging.rs  main.rs  state.rs  ui.rs
src/config/: io.rs  keybinds.rs
src/state/: details.rs  event.rs  task.rs  utils.rs
src/ui/: calendar.rs  state.rs  widget.rs
