[package]
name = "qcal"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
gtk4 = { version = "0.11.3", features = ["v4_20"] }
gtk4-layer-shell = "0.8.0"
icalendar = "0.17.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
